Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-9538

Server crashes in check_show_access on SHOW STATISTICS

    XMLWordPrintable

Details

    • 10.1.12

    Description

      Reported on behalf of Daniel Dettlaff

      SHOW STATISTICS;

      Stack trace from 10.1 commit 7b14ba63f22e6c98c1982dae8847035ad1b8e155

      3  <signal handler called>
      #4  0x000055ce08da12c1 in check_show_access (thd=0x7fbd8645f270, table=0x7fbda8833d78) at /src/10.1/sql/sql_parse.cc:6366
      #5  0x000055ce08da14bd in check_table_access (thd=0x7fbd8645f270, requirements=1, tables=0x7fbda8833d78, any_combination_of_privileges_will_do=false, number=4294967295, no_errors=false) at /src/10.1/sql/sql_parse.cc:6473
      #6  0x000055ce08d9619f in mysql_execute_command (thd=0x7fbd8645f270) at /src/10.1/sql/sql_parse.cc:2957
      #7  0x000055ce08da377a in mysql_parse (thd=0x7fbd8645f270, rawbuf=0x7fbda8832ec8 "show statistics", length=15, parser_state=0x7fbdabe3e630) at /src/10.1/sql/sql_parse.cc:7303
      #8  0x000055ce08d92474 in dispatch_command (command=COM_QUERY, thd=0x7fbd8645f270, packet=0x7fbd8647eaf1 "show statistics", packet_length=15) at /src/10.1/sql/sql_parse.cc:1488
      #9  0x000055ce08d911a6 in do_command (thd=0x7fbd8645f270) at /src/10.1/sql/sql_parse.cc:1109
      #10 0x000055ce08ec6798 in do_handle_one_connection (thd_arg=0x7fbd8645f270) at /src/10.1/sql/sql_connect.cc:1349
      #11 0x000055ce08ec64fc in handle_one_connection (arg=0x7fbd8645f270) at /src/10.1/sql/sql_connect.cc:1261
      #12 0x00007fbdabad60a4 in start_thread () from /lib64/libpthread.so.0
      #13 0x00007fbda9c4404d in clone () from /lib64/libc.so.6

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.5h
                  0.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.